--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.floor {
+  background-image: url('/public/floor.webp');
+  background-size: 256px;
+  background-repeat: repeat;
+  filter: brightness(80%) grayscale(40%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
